apps/weather-app/weather-istio/ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
   name: weather-ingress

spec:
   selector:
      istio: ingressgateway
   servers:
   - hosts:
     - weather.default.svc.cluster.local
     port:
        number: 80
        protocol: HTTP
        name: HTTP

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
   name: weather-ingress

spec:
   hosts:
   - "*"
   gateways:
   - weather-ingress.default.svc.cluster.local
   http:
   - match:
     - uri:
        exact: /v1
     route:
     - destination:
        host: weather.default.svc.cluster.local
        port: 
            number: 8080
        subset: LeastConn
     rewrite:
        uri: /
   - match:
     - uri:
        prefix: /v1
     route:
     - destination:
        host: weather.default.svc.cluster.local
        port: 
            number: 8080
        subset: LeastConn
     rewrite:
        uri: " "

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule

metadata:
   name: weather-ingress

spec:
   host: weather
   trafficPolicy:
      loadBalancer:
         simple: LEAST_CONN
   subsets:
      - name: LeastConn
        labels:
           app: weather
